# wan2lab

./: .gitignore  README.md  pyproject.toml
apps/desktop/src/wan2lab/: __init__.py  __main__.py  app.py  assets.py  controller.py  export_runner.py  frame_runner.py  krea_worker.py  krea_worker_client.py  mannequin.py  media.py  worker.py  worker_client.py
apps/desktop/src/wan2lab/backends/: __init__.py  comfy_runtime.py  comfy_workflow.py  comfyui.py
apps/desktop/src/wan2lab/qml/: Main.qml
apps/desktop/tests/: test_asset_store.py  test_comfy_runtime.py  test_comfy_workflow.py  test_comfyui_backend.py  test_desktop_controller.py  test_krea_worker.py  test_mannequin_renderer.py  test_media_execution.py  test_packaging.py  test_qml_shell.py  test_worker_client.py  test_worker_service.py
docs/: approved-hardware-and-acceleration.md  krea-adapter-handoff-hardware.md  krea-face-detection-hardware.md  krea-frame-correction-hardware.md  krea-mannequin-fallback-hardware.md  krea-to-wan2.2-hardware.md  phase1-acceptance.md  phase1-definition-of-done.md  phase1-export-hardware.md  phase1-genuine-continuation-export.md  runpod-cli-lab.md  runpod-rtx5090-ti2v-benchmark.md  wan-cache-acceleration.md  wan2.1-flf2v-hardware.md  wan2.2-animate-hardware.md  wan2.2-animate-installation.md  wan2.2-replace-hardware.md  wan2.2-sequential-extension-hardware.md  wan2.2-ti2v-5b-hardware.md
scripts/: krea_adapter_keyframe_smoke.py  krea_face_detection_smoke.py  krea_face_refinement_smoke.py  krea_frame_correction_smoke.py  krea_keyframe_smoke.py  krea_mannequin_fallback_smoke.py  phase1_export_smoke.py  wan2_1_flf2v_smoke.py  wan2_2_animate_smoke.py  wan2_2_smoke.py
scripts/runpod/: bootstrap_cli_lab.sh  install_ti2v_5b_models.sh  provision_cli_lab.sh  start_comfy.sh  verify_cli_lab.py
