[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "wan2lab"
version = "0.1.0"
description = "Review-gated local Wan video production studio"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "k2core @ git+https://github.com/soomrenald/k2core.git@a82b0b32a891e19eac5c5f6e35f8a9bfb715f9dc",
    "pydantic>=2.10,<3",
    "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.scripts]
wan2lab = "wan2lab.app:main"
wan2lab-worker = "wan2lab.worker:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "apps/desktop/src/wan2lab",
    "packages/wan2core/src/wan2core",
]

[tool.pytest.ini_options]
testpaths = ["packages/wan2core/tests", "apps/desktop/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
